src/style/Menu.scss
.bm-burger-button {
  position: absolute;
  top: 35%;
  left: 2rem;
  // top: 30%;
  // z-index: 1000;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  // background: lightgrey;
  color: black;
}

/* Color/shape of burger icon bars on hover*/
.bm-burger-bars-hover {
  background: #a90000;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24px;
  width: 24px;
  margin: 1em;
}

/* Color/shape of close button cross */
.bm-cross {
  background: black;
}

/*
Sidebar wrapper styles
Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
*/
.bm-menu-wrap {
  position: fixed;
  height: 100%;
}

/* General sidebar styles */
.bm-menu {
  background: white;
  padding: 5em 0.5em;

  // font-size: 1em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #1c1b1b;
}

/* Wrapper for item list */
.bm-item-list {
  padding: 0 1em;
  @media (min-width: 640px) {
    padding: 0 2em;
  }

  @media (min-width: 768px) {
    padding: 0 4em;
  }

  @media (min-width: 1024px) {
    padding: 0 8em;
  }

  @media (min-width: 1280px) {
    padding: 0 16em;
  }
}

/* Individual item */
.bm-item {
  color: black;
  text-decoration: none;
  letter-spacing: 2px;
  height: auto;
  padding: 1.15em;
  border: 1px solid #ddd;
  border-color: black;
  border-radius: 3px;
  margin-bottom: 0.75em;
  transition: all 150ms ease-in-out;
  span {
    float: right;
    transform: translateX(-12px);
    transition: transform 400ms ease-in-out;
  }
  &:hover {
    color: lightgrey;
    border-color: lightgrey;
    transition: all 150ms ease-in-out;
    span {
      transform: translateX(0px);
      opacity: 1;
      transition: transform 150ms ease-in-out;
    }
  }
}

/* Styling of overlay */
.bm-overlay {
  background: rgba(0, 0, 0, 0.8);
}

.Menu__logo {
  padding: 0 2.5em;
  display: block;
  border: none !important;
  margin: auto;
  margin-bottom: 1em;
}

.Menu__social__buttons {
  display: flex !important ;
  justify-content: space-evenly;
  border: none;
  a {
    color: black;
  }
}

